Push the main content to stop it being hidden by the header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ main {
     background-color: lightblue;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto; /* shorthand for flex-grow, flex-shrink, flex-basis */
+    margin-top: 47px; /* Push the main content down to avoid it being hidden by the header */
 }
 
 /* Footer */
